<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="pl.c.curiosity.ui.curious.add.AddCuriousNoteViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newNoteView_layoutNoteTitle"
            style="@style/TextLayoutNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_note_view_note_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newNoteView_inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@={viewModel.observableNoteTitle}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newNoteView_layoutNoteText"
            style="@style/TextLayoutNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_note_view_note_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newNoteView_layoutNoteTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newNoteView_inputNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@={viewModel.observableNote}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newNoteView_layoutNoteUrl"
            style="@style/TextLayoutNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_note_view_note_url_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newNoteView_layoutNoteText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newNoteView_inputNoteUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@={viewModel.observableNoteUrl}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/newNoteView_checkBoxToCheck"
            style="@style/CheckBoxStyle"
            android:text="@string/check_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.observableChecker}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newNoteView_layoutNoteUrl"
            />

        <Button
            android:id="@+id/btnAddNote"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="@{() -> viewModel.save()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newNoteView_checkBoxToCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>